# gstreamer_nvmm_vidstab

./: meson.build  test_algos.py  test_gst.sh  test_recording.sh
gst-plugin/: meson.build
gst-plugin/src/: gstmyfilter.c  gstmyfilter.c.save  gstmyfilter.h
